feat(posts): implement post creation + friends-only feed with media mapping
- Add PostService for creating posts and mapping PostResponseDTO
- Support optional media list with ordered positions
- Add feed query scoped to friends + self and sorted by createdAt desc
- Include reaction/comment counts and current user reaction in DTO
feat(posts): add multipart post upload endpoint with file storage integration

- Add /api/v1/posts multipart/form-data endpoint (data + files)
- Store uploaded media and attach to post with stable ordering
- Keep JSON endpoint as optional fallback for non-media posts
feat(comments): add threaded comments with pagination and soft delete

- Add CommentService for top-level comments and replies listing
- Validate parent comment belongs to the same post
- Enforce author-only deletion using soft delete flag
- Return CommentResponseDTO with author summary fields
feat(reactions): add post reaction upsert/remove endpoints

- Upsert LIKE/DISLIKE per user per post
- Remove reaction with visibility guard
- Validate reaction type and return proper 400 for missing type
feat(presence): add in-memory online tracking and online friends endpoint

- Add PresenceService backed by ConcurrentHashMap with lastPing
- Add presence controller to return friends online state + lastSeen
- Map friend profile fields into OnlineFriendDTO
feat(chat): implement messaging with REST history + WebSocket delivery

- Add ChatServiceImpl to send messages with friends-only constraint
- Auto-create conversation between users if missing
- Add ChatQueryServiceImpl for paged message history and stable ordering
- Add chat REST controller endpoint to fetch messages with a user
feat(ws): secure STOMP websocket connect using JWT Authorization header

- Add WebSocketConfig with /ws endpoint and user destination prefix
- Add WsAuthChannelInterceptor to parse JWT from CONNECT header
- Set Principal as email to enable convertAndSendToUser routing
fix(api): return proper status codes for chat

--- a/.env
+++ b/.env
@@ -10,11 +10,19 @@ DB_PASS=9006
 JWT_ISSUER=auth-jwt
 JWT_ACCESS_SECRET=CHANGE_ME_ACCESS_SECRET_32+CHARS_LONG________
 JWT_REFRESH_SECRET=CHANGE_ME_REFRESH_SECRET_32+CHARS_LONG_______
-JWT_ACCESS_EXP_MIN=15
+JWT_ACCESS_EXP_MIN=1500
 JWT_REFRESH_EXP_DAYS=14
 
-UPLOAD_PROFILE_DIR=C:/Users/Mohamed/Desktop/Github/Friend-Finder/friend-finder-back-end/Friend-Finder/front-end/friendfinder/src/assets/images
+UPLOAD_PROFILE_DIR=C:/Users/Mohamed/Desktop/Github/frontend/friend-finder-front/src/assets/images
 UPLOAD_PROFILE_URL_PREFIX=assets/images
+
+
+
+# Post media uploads (disk) - NEW
+UPLOAD_POST_DIR=C:/Users/Mohamed/Desktop/Github/frontend/friend-finder-front/src/assets/images
+UPLOAD_POST_URL_PREFIX=assets/images
+
+
 
 APP_BASE_URL=http://localhost:8080
 CORS_ALLOWED_ORIGINS=http://localhost:4200,http://127.0.0.1:4200
